[package]
name = "bevy-example"
version = "1.0.7"
authors = ["Robert Bisewski <rbisewski@ibiscybernetics.com>"]
edition = "2021"
rust-version = "1.68.1"
resolver = "2"

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
strip = "symbols"

[dependencies]
bevy = "0.10.0"
json = "0.12.4"
rand = "0.8.5"
