[package]
name = "bevy-example"
version = "1.0.9"
authors = ["Robert Bisewski <rbisewski@ibiscybernetics.com>"]
edition = "2021"
rust-version = "1.83"
resolver = "2"

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
strip = "symbols"

[dependencies]
bevy = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
