[package]
name = "bevy-example"
version = "1.1.0"
authors = ["Robert Bisewski <rbisewski@ibiscybernetics.com>"]
edition = "2021"
rust-version = "1.83"
resolver = "2"

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
strip = "symbols"

[dependencies]
fastrand = { version = "2.3.0", features = ["js"] }
bevy = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
